--- a/sites/all/themes/picsforpets/sass/pfp-design/_design.sass
+++ b/sites/all/themes/picsforpets/sass/pfp-design/_design.sass
@@ -330,12 +330,13 @@ a.footer-furtography
     margin-left: 46px
 
 .picsforpets-share-count-arrow
-  background: url(../images/fb-share-count.png) no-repeat
-  background-position: 2px 8px
-  position: relative
-  z-index: 800
-  padding: 3px
-  margin-right: -2px
+  // background: url(../images/fb-share-count.png) no-repeat
+  // background-position: -4px 8px
+  // position: relative
+  // z-index: 800
+  // padding: 3px
+  // margin-right: -2px
+  display: none
 
 .picsforpets-share-count
   border: 1px solid #c5c6c8
