--- a/sites/all/themes/picsforpets/sass/pfp-design/_gallery.sass
+++ b/sites/all/themes/picsforpets/sass/pfp-design/_gallery.sass
@@ -99,9 +99,11 @@ select#edit-sort-by
   a
     color: $white
     padding: 0
+    margin-bottom: -30px
+    display: block
   .click-to-learn
     font-size: 18px
-    margin-bottom: 4px
+    margin-bottom: 38px
     a
       border-bottom: 1px solid $white
 
@@ -110,28 +112,39 @@ select#edit-sort-by
 
   .gallery-share-button
     @extend %league-gothic
-    +border-radius(6px)
-    +clearfix
+    +border-radius(4px)
+    // +clearfix
+    +float-left
     cursor: pointer
     background: $pfp-blue-fb
     padding: 4px
     margin-right: 8px
+    margin-top: 12px
+    margin-left: 12px
     width: 190px
     font-size: 18px
-    line-height: 1
+    line-height: 0.75
     text-transform: uppercase
     color: $white
+    display: block
+    width: 60px
 
   .gallery-share-count
     border: 1px solid #c5c6c8
     position: relative
     z-index: 750
     background-color: $white
-    padding: 2px 4px
+    padding: 4px
     color: $pfp-gray
+    display: block
+    margin-top: 12px
+    +float-left
+    height: 21px
+    min-width: 22px
+    font-size: 18px
+    line-height: 0.75
 
-  .picsforpets-share-count-arrow
-    margin-right: -1px
+
 
 ////////////////////////////
 // NO RESULTS
